--- a/Data_types.html
+++ b/Data_types.html
@@ -7,19 +7,19 @@
 </head>
 <body>
     <script>
-        // Declare a string variable
+        //string
 var String = "Hello, Rwanda!";
 console.log("String: " + String);
 
-// Declare a number variable
+// Number
 var Number = 2024;
 console.log("Number: " + Number);
 
-// Declare a boolean variable
+//Boolean
 var Boolean = true;
 console.log("Boolean: " + Boolean);
 
-// Declare an object
+// Object
 var Person= {
     firstName: "Kevin",
     lastName: "SEZERANO",
@@ -27,9 +27,9 @@ var Person= {
 };
 console.log("Object: ", Person);
 
-// Declare an array
-var myArray = ["coffee", "tea", "milk"];
-console.log("Array: ", myArray);
+// Array
+var Array = ["coffee", "tea", "milk"];
+console.log("Array: ", Array);
 
     </script>
 </body>
