name as the comment

--- a/Array Solt.html
+++ b/Array Solt.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script>
+      //TUMUKUNDE Jeannine
+      //SEZERANO Kevin
 var students = [
     { name: "Jeannine", age: 22, grade: 85 },
     { name: "Tumukunde", age: 27, grade: 92 },
