--- a/Book_features.html
+++ b/Book_features.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script>
+      //TUMUKUNDE Jeannine
+      //SEZERANO Kevin
+
 var book = {
     title: "The Great Wall Of China",
     author: "TUMUKUNDE Jeannine",
