--- a/Data_types.html
+++ b/Data_types.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script>
+      //TUMUKUNDE Jeannine
+      //SEZERANO Kevin
+
         //string
 var String = "Hello, Rwanda!";
 console.log("String: " + String);
