--- a/ES6.HTML
+++ b/ES6.HTML
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script>
+      //TUMUKUNDE Jeannine
+      //SEZERANO Kevin
+
 const square = (num) => num * num;
 
 console.log(square(5)); 
