--- a/EvenOrOdd.html
+++ b/EvenOrOdd.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script>
+       //TUMUKUNDE Jeannine
+      //SEZERANO Kevin
+      
         var num = prompt ("Enter the number");
         if(num%2 == 1){
             console.log("The Number Is Odd")
