--- a/Manipulate array of student.html
+++ b/Manipulate array of student.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script>
+      //TUMUKUNDE Jeannine
+      //SEZERANO Kevin
+
 var students = [
     { name: "John", age: 16, grade: 85 },
     { name: "Alice", age: 17, grade: 92 },
