--- a/reversString.html
+++ b/reversString.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script>
+      //TUMUKUNDE Jeannine
+      //SEZERANO Kevin
+
 function reverseString(str) {
     return str.split('').reverse().join('');
 }
