--- a/switch-case.html
+++ b/switch-case.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script>
+      //TUMUKUNDE Jeannine
+      //SEZERANO Kevin
+
         // Function to perform addition
 function add(a, b) {
     return a + b;
