--- a/ArrayN.html
+++ b/ArrayN.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script>
+      //TUMUKUNDE Jeannine
+      //SEZERANO Kevin
+
 function sumArray(numbers) {
     let sum = 0;
     for (let i = 0; i < numbers.length; i++) {
