--- a/destructuring.html
+++ b/destructuring.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script>
+       //TUMUKUNDE Jeannine
+      //SEZERANO Kevin
+
 const person = {
     firstName: "Tumukunde",
     lastName: "Jeannine",
